lua/LuaParser.py
# Generated from Lua.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'break'", "'goto'", "'do'", 
                     "'end'", "'while'", "'repeat'", "'until'", "'if'", 
                     "'then'", "'elseif'", "'else'", "'for'", "','", "'in'", 
                     "'function'", "'local'", "'return'", "'::'", "'.'", 
                     "':'", "'nil'", "'false'", "'true'", "'...'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'", 
                     "'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'..'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'&'", "'|'", 
                     "'~'", "'<<'", "'>>'", "'not'", "'#'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
                      "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", 
                      "WS", "SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_retstat = 3
    RULE_label = 4
    RULE_funcname = 5
    RULE_varlist = 6
    RULE_namelist = 7
    RULE_explist = 8
    RULE_exp = 9
    RULE_prefixexp = 10
    RULE_functioncall = 11
    RULE_varOrExp = 12
    RULE_var = 13
    RULE_varSuffix = 14
    RULE_nameAndArgs = 15
    RULE_args = 16
    RULE_functiondef = 17
    RULE_funcbody = 18
    RULE_parlist = 19
    RULE_tableconstructor = 20
    RULE_fieldlist = 21
    RULE_field = 22
    RULE_fieldsep = 23
    RULE_operatorOr = 24
    RULE_operatorAnd = 25
    RULE_operatorComparison = 26
    RULE_operatorStrcat = 27
    RULE_operatorAddSub = 28
    RULE_operatorMulDivMod = 29
    RULE_operatorBitwise = 30
    RULE_operatorUnary = 31
    RULE_operatorPower = 32
    RULE_number = 33
    RULE_string = 34

    ruleNames =  [ "chunk", "block", "stat", "retstat", "label", "funcname", 
                   "varlist", "namelist", "explist", "exp", "prefixexp", 
                   "functioncall", "varOrExp", "var", "varSuffix", "nameAndArgs", 
                   "args", "functiondef", "funcbody", "parlist", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", 
                   "operatorComparison", "operatorStrcat", "operatorAddSub", 
                   "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
                   "operatorPower", "number", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    NAME=56
    NORMALSTRING=57
    CHARSTRING=58
    LONGSTRING=59
    INT=60
    HEX=61
    FLOAT=62
    HEX_FLOAT=63
    COMMENT=64
    LINE_COMMENT=65
    WS=66
    SHEBANG=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ChunkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.block()
            self.state = 71
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(LuaParser.RetstatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__0) | (1 << LuaParser.T__2) | (1 << LuaParser.T__3) | (1 << LuaParser.T__4) | (1 << LuaParser.T__6) | (1 << LuaParser.T__7) | (1 << LuaParser.T__9) | (1 << LuaParser.T__13) | (1 << LuaParser.T__16) | (1 << LuaParser.T__17) | (1 << LuaParser.T__19) | (1 << LuaParser.T__26) | (1 << LuaParser.NAME))) != 0):
                self.state = 73
                self.stat()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuaParser.T__18:
                self.state = 79
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuaParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StatcallContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatcall" ):
                listener.enterStatcall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatcall" ):
                listener.exitStatcall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatcall" ):
                return visitor.visitStatcall(self)
            else:
                return visitor.visitChildren(self)


    class StatforeachContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatforeach" ):
                listener.enterStatforeach(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatforeach" ):
                listener.exitStatforeach(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatforeach" ):
                return visitor.visitStatforeach(self)
            else:
                return visitor.visitChildren(self)


    class StatsemicolonContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatsemicolon" ):
                listener.enterStatsemicolon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatsemicolon" ):
                listener.exitStatsemicolon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatsemicolon" ):
                return visitor.visitStatsemicolon(self)
            else:
                return visitor.visitChildren(self)


    class StatbreakContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatbreak" ):
                listener.enterStatbreak(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatbreak" ):
                listener.exitStatbreak(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatbreak" ):
                return visitor.visitStatbreak(self)
            else:
                return visitor.visitChildren(self)


    class StatgotoContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatgoto" ):
                listener.enterStatgoto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatgoto" ):
                listener.exitStatgoto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatgoto" ):
                return visitor.visitStatgoto(self)
            else:
                return visitor.visitChildren(self)


    class StatlocalfuncContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatlocalfunc" ):
                listener.enterStatlocalfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatlocalfunc" ):
                listener.exitStatlocalfunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatlocalfunc" ):
                return visitor.visitStatlocalfunc(self)
            else:
                return visitor.visitChildren(self)


    class StatlocalContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatlocal" ):
                listener.enterStatlocal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatlocal" ):
                listener.exitStatlocal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatlocal" ):
                return visitor.visitStatlocal(self)
            else:
                return visitor.visitChildren(self)


    class StatwhileContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatwhile" ):
                listener.enterStatwhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatwhile" ):
                listener.exitStatwhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatwhile" ):
                return visitor.visitStatwhile(self)
            else:
                return visitor.visitChildren(self)


    class StatdoContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatdo" ):
                listener.enterStatdo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatdo" ):
                listener.exitStatdo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatdo" ):
                return visitor.visitStatdo(self)
            else:
                return visitor.visitChildren(self)


    class StatglobalfuncContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)

        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatglobalfunc" ):
                listener.enterStatglobalfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatglobalfunc" ):
                listener.exitStatglobalfunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatglobalfunc" ):
                return visitor.visitStatglobalfunc(self)
            else:
                return visitor.visitChildren(self)


    class StatlabelContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatlabel" ):
                listener.enterStatlabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatlabel" ):
                listener.exitStatlabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatlabel" ):
                return visitor.visitStatlabel(self)
            else:
                return visitor.visitChildren(self)


    class StatassignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varlist(self):
            return self.getTypedRuleContext(LuaParser.VarlistContext,0)

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatassign" ):
                listener.enterStatassign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatassign" ):
                listener.exitStatassign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatassign" ):
                return visitor.visitStatassign(self)
            else:
                return visitor.visitChildren(self)


    class StatifContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatif" ):
                listener.enterStatif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatif" ):
                listener.exitStatif(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatif" ):
                return visitor.visitStatif(self)
            else:
                return visitor.visitChildren(self)


    class StatrepeatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatrepeat" ):
                listener.enterStatrepeat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatrepeat" ):
                listener.exitStatrepeat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatrepeat" ):
                return visitor.visitStatrepeat(self)
            else:
                return visitor.visitChildren(self)


    class StatforContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatfor" ):
                listener.enterStatfor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatfor" ):
                listener.exitStatfor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatfor" ):
                return visitor.visitStatfor(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = LuaParser.StatsemicolonContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(LuaParser.T__0)
                pass

            elif la_ == 2:
                localctx = LuaParser.StatassignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.varlist()
                self.state = 84
                self.match(LuaParser.T__1)
                self.state = 85
                self.explist()
                pass

            elif la_ == 3:
                localctx = LuaParser.StatcallContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.functioncall()
                pass

            elif la_ == 4:
                localctx = LuaParser.StatlabelContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.label()
                pass

            elif la_ == 5:
                localctx = LuaParser.StatbreakContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(LuaParser.T__2)
                pass

            elif la_ == 6:
                localctx = LuaParser.StatgotoContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 90
                self.match(LuaParser.T__3)
                self.state = 91
                self.match(LuaParser.NAME)
                pass

            elif la_ == 7:
                localctx = LuaParser.StatdoContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.match(LuaParser.T__4)
                self.state = 93
                self.block()
                self.state = 94
                self.match(LuaParser.T__5)
                pass

            elif la_ == 8:
                localctx = LuaParser.StatwhileContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 96
                self.match(LuaParser.T__6)
                self.state = 97
                self.exp(0)
                self.state = 98
                self.match(LuaParser.T__4)
                self.state = 99
                self.block()
                self.state = 100
                self.match(LuaParser.T__5)
                pass

            elif la_ == 9:
                localctx = LuaParser.StatrepeatContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 102
                self.match(LuaParser.T__7)
                self.state = 103
                self.block()
                self.state = 104
                self.match(LuaParser.T__8)
                self.state = 105
                self.exp(0)
                pass

            elif la_ == 10:
                localctx = LuaParser.StatifContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 107
                self.match(LuaParser.T__9)
                self.state = 108
                self.exp(0)
                self.state = 109
                self.match(LuaParser.T__10)
                self.state = 110
                self.block()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LuaParser.T__11:
                    self.state = 111
                    self.match(LuaParser.T__11)
                    self.state = 112
                    self.exp(0)
                    self.state = 113
                    self.match(LuaParser.T__10)
                    self.state = 114
                    self.block()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__12:
                    self.state = 121
                    self.match(LuaParser.T__12)
                    self.state = 122
                    self.block()


                self.state = 125
                self.match(LuaParser.T__5)
                pass

            elif la_ == 11:
                localctx = LuaParser.StatforContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 127
                self.match(LuaParser.T__13)
                self.state = 128
                self.match(LuaParser.NAME)
                self.state = 129
                self.match(LuaParser.T__1)
                self.state = 130
                self.exp(0)
                self.state = 131
                self.match(LuaParser.T__14)
                self.state = 132
                self.exp(0)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__14:
                    self.state = 133
                    self.match(LuaParser.T__14)
                    self.state = 134
                    self.exp(0)


                self.state = 137
                self.match(LuaParser.T__4)
                self.state = 138
                self.block()
                self.state = 139
                self.match(LuaParser.T__5)
                pass
